--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,9 +1,17 @@
 .content {
-  min-height: calc(100vh - 70px);
+  min-height: calc(30vh - 100px);
 }
 .footer {
   height: 255px;
 }
 .footer-copyright {
   margin-top: 130px;
+}
+
+.banner {
+  background-image: url("./components/img/controller-game-hands-807330.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 400px;
+  max-height: 100%;
 }
