--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,23 @@
+nav {
+  height: 100%;
+}
+
+.logo {
+  font-size: 2.1rem
+}
+
+li {
+  font-size: 1.5rem;
+}
+
 .content {
   min-height: calc(30vh - 100px);
 }
 .footer {
   height: 150px;
 }
+
+
 
 .banner {
   background-image: url("./components/img/controller-game-hands-807330.jpg");
@@ -12,3 +26,5 @@
   height: 400px;
   max-height: 100%;
 }
+
+
